Fix ManagedTree overflow

--- a/src/components/shared/ManagedTree.css
+++ b/src/components/shared/ManagedTree.css
@@ -10,6 +10,7 @@
   user-select: none;
 
   white-space: nowrap;
+  overflow: auto;
   min-width: 100%;
 
   display: grid;
